fixed youtube video alignment

--- a/css/style.css
+++ b/css/style.css
@@ -222,19 +222,26 @@ body {
 /* youtube video formatting */
 .youtube {
   position: relative;
-  width: 100%;
-  height: 0;
-  padding-bottom: 50%;
-  z-index: 0;
+  padding-bottom: 56.25%;
+  padding-top: 25px;
 }
 
-.video {
+.youtube iframe {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
+}
+
+.video {
+  position: relative;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   z-index: 0;
+  align-self: center;
 }
 
 /* my dev projects */
